# Futaba

./: .gitmodules  CMakeLists.txt  README.md
include/futaba/: futaba.h
include/futaba/core/: config.h  pixel.h  ray.h  vec3.h
include/futaba/python/: python.h
include/futaba/render/: camera.h  sphere.h
src/: CMakeLists.txt
src/futaba/: CMakeLists.txt  futaba.cpp
src/libcore/: CMakeLists.txt
src/libcore/python/: CMakeLists.txt  image_py.cpp  main.cpp  pixel_py.cpp  ray_py.cpp  vec3_py.cpp
src/librender/: CMakeLists.txt
src/librender/python/: CMakeLists.txt  aggregate_py.cpp  camera_py.cpp  hit_py.cpp  main.cpp  sphere_py.cpp
src/sensors/: CMakeLists.txt
